--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dadan & Nita Wedding</title>
+    <title>The Wedding Of Dadan & Nita</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
- 
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
 <body>
   <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
     <main>
-      <h4>Kepada Yth. <span></span></h4>
+      <h4>Kepada <span>Bapak/Ibu, Saudara/i.</span></h4>
       <h1>Dadan Mulyadi & Nita Anita </h1>
       <p>Akan melangsungkan resepsi pernikahan dalam:</p>
 
@@ -63,65 +63,59 @@
     <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dadan & Nita Wedding</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-      <div class="offcanvas-body">
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="#home">Home</a>
-        <a class="nav-link" href="#info">Info</a>
-        <a class="nav-link" href="#gallery">Gallery</a>
-        <a class="nav-link" href="#rsvp">RSVP & Ucapan</a>
-        <a class="nav-link" href="#gifts">Gifts</a>
-      </div>
 
-
-
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+      <div class="offcanvas-body ">
+        <ul class="navbar-nav ms-auto justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#info">Info</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#gallery">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#rsvp">RSVP & Ucapan</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#gifts">Gifts</a>
+          </li>
             </ul>
           </li>
-        </ul>
       </div>
     </div>
   </div>
 </nav>
-
 <section id="home" class="home">
   <div class="container">
-    <div class="row justify-content-center text-center mb-5">
+    <div class="row justify-content-center text-center mb-5" data-aos="zoom-in" data-aos-duration="1000">
       <div class="col-md-8">
-        <h2>Acara Pernikahan</h2>
-        <h3>Diselenggarakan pada rabu,11 Juni 2025</h3>
-        <p>
-          Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu,
-          Saudara/i, untuk hadir pada acara pernikahan kami.
-        </p>
+        <h2 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">Acara Pernikahan</h2>
+        <h3 data-aos="zoom-in" data-aos-delay="200" data-aos-duration="1000">Diselenggarakan pada rabu,11 Juni 2025</h3>
+        <p data-aos="zoom-in" data-aos-delay="400" data-aos-duration="1000">Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir pada acara pernikahan kami.</p>
       </div>
     </div>
 
     <div class="row justify-content-center align-items-center text-center couple">
-      <div class="col-md-5">
+      <div class="col-md-5" data-aos="zoom-in" data-aos-duration="1000">
         <img src="img/l.jpeg" alt="Dadan Mulyadi" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
-        <h3>Dadan Mulyadi</h3>
-        <p>Putra ke-3 Bpk. Rusman <br> dan <br> Ibu Neni</p>
+        <h3 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">Dadan Mulyadi</h3>
+        <p data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">Putra ke-3 Bpk. Rusman <br> dan <br> Ibu Neni</p>
       </div>
-
-      <div class="col-md-2 d-flex justify-content-center align-items-center">
+      <div class="col-md-2 d-flex justify-content-center align-items-center" data-aos="zoom-in" data-aos-duration="1000"">
         <span style="font-size: 3rem;">&amp;</span>
       </div>
-
-      <div class="col-md-5">
+      <div class="col-md-5" data-aos="zoom-in" data-aos-duration="1000">
         <img src="img/p.jpg" alt="Nita Anita" class="img-fluid rounded-circle mb-3" style="width: 200px; height: 200px; object-fit: cover;">
-        <h3>Nita Anita</h3>
-        <p>Putri ke-2 Bpk. Didi Setiadi <br> dan <br> Ibu Nunung</p>
+        <h3 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">Nita Anita</h3>
+        <p data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">Putri ke-2 Bpk. Didi Setiadi <br> dan <br> Ibu Nunung</p>
       </div>
     </div>
   </div>
@@ -129,92 +123,74 @@
 
 <section id="info" class="info">
   <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-10 text-center ">
-      <h2>Informasi Acara</h2>
-      <p class="description">Dengan memohon rahmat dan ridho Allah SWT,kami mengundang<br>Bapak/Ibu/Saudara/i,untuk menghadiri acara pernikahan kami:
-      </p>
-    </div>
-  </div>
-  <div class="row justify-content-center mt-3">
-    <div class="col-md-5 col-10">
-      <div class="card text-center text-bg-light mb-5">
-  <div class="card-header">Akad Nikah</div>
-  <div class="card-body">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-       <i class="bi bi-clock d-block"></i>
-       <span>08.00 s/d selesai</span>
-      </div>
-      <div class="col-md-6">
-       <i class="bi bi-calendar3 d-block"></i>
-       <span>Rabu,11 juni 2025</span>
+    <div class="row justify-content-center" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="col-md-8 col-10 text-center">
+        <h2 data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">Informasi Acara</h2>
+        <p class="description" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">Dengan memohon rahmat dan ridho Allah SWT, kami mengundang<br>Bapak/Ibu/Saudara/i, untuk menghadiri acara pernikahan kami:</p>
       </div>
     </div>
-  </div>
-  <div class="card-footer ">
-    Alamat: Blok Karangtengah RT 05 RW 02<br>Desa Jagara, Kec. Darma, Kab. Kuningan.
-
-    <div class="mt-3">
-    <a href="https://maps.app.goo.gl/QHczWFfTN9EnnRyt8" target="_blank" class="btn btn-light btn-sm">
-      Lihat Lokasi
-    </a>
-  </div>
-  </div>
-</div>
-</div>
+    <div class="row justify-content-center mt-3">
+      <div class="col-md-5 col-10" data-aos="zoom-in" data-aos-duration="1000"">
+        <div class="card text-center text-bg-light mb-5">
+          <div class="card-header">Akad Nikah</div>
+          <div class="card-body">
+            <div class="row justify-content-center">
+              <div class="col-md-6">
+                <i class="bi bi-clock d-block"></i>
+                <span>08.00 s/d selesai</span>
+              </div>
+              <div class="col-md-6">
+                <i class="bi bi-calendar3 d-block"></i>
+                <span>Rabu, 11 Juni 2025</span>
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            Alamat: Blok Karangtengah RT 05 RW 02<br>Desa Jagara, Kec. Darma, Kab. Kuningan.
+            <div class="mt-3">
+              <a href="https://maps.app.goo.gl/QHczWFfTN9EnnRyt8" target="_blank" class="btn btn-light btn-sm">Lihat Lokasi</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 </section>
 
 <section id="gallery" class="gallery">
   <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" data-aos="zoom-in"  data-aos-duration="1000">
       <div class="col-md-8 col-10 text-center">
         <h2 class="fw-bold">Gallery</h2>
       </div>
     </div>
-
-    <!-- Baris Gambar -->
     <div class="row g-4">
-      <!-- Gambar 1 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center"data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
         <a href="img/gallery/g1.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t1.jpg" alt="Gambar 1" class="img-fluid rounded">
         </a>
       </div>
-
-      <!-- Gambar 2 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center" data-aos="zoom-in"data-aos-delay="100" data-aos-duration="1100">
         <a href="img/gallery/g2.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t2.jpg" alt="Gambar 2" class="img-fluid rounded">
         </a>
       </div>
-
-      <!-- Gambar 3 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center"data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
         <a href="img/gallery/g3.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t3.jpg" alt="Gambar 3" class="img-fluid rounded">
         </a>
       </div>
-
-      <!-- Gambar 4 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1100">
         <a href="img/gallery/g4.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t4.jpg" alt="Gambar 4" class="img-fluid rounded">
         </a>
       </div>
-
-      <!-- Gambar 5 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
         <a href="img/gallery/g5.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t5.jpg" alt="Gambar 5" class="img-fluid rounded">
         </a>
       </div>
-
-      <!-- Gambar 6 -->
-      <div class="col-6 col-sm-4 text-center">
+      <div class="col-6 col-sm-4 text-center" data-aos="zoom-in" data-aos-delay="100"data-aos-duration="1100">
         <a href="img/gallery/g6.jpeg" data-toggle="lightbox" data-caption="Dadan & Nita" data-gallery="mygallery" target="_blank">
           <img src="img/gallery/thumbnail/t6.jpg" alt="Gambar 6" class="img-fluid rounded">
         </a>
@@ -222,12 +198,13 @@
     </div>
   </div>
 </section>
+</section>
 
 
 <section id="rsvp" class="rsvp">
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-8 col-10 text-center ">
+    <div class="col-md-8 col-10 text-center" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
       <h2>RSVP & Ucapan</h2>
     </div>
   </div>
@@ -264,7 +241,7 @@
 
   (function() {
     var d = document, s = d.createElement('script');
-    s.src = 'https://rizki-3.disqus.com/embed.js'; // ganti jika shortname kamu berbeda
+    s.src = 'https://rizki-3.disqus.com/embed.js'; 
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
   })();
@@ -277,17 +254,20 @@
 </section>
 
 
-<section id="gifts" class="gifts py-5">
+<section id="gifts" class="gifts py-5 "data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-10 text-center mb-4">
         <h2>Wedding Gift</h2>
-        <p>Tanpa mengurangi rasa hormat kami, bagi tamu yang ingin mengirimkan hadiah kepada kedua mempelai dapat mengirimkannya melalui:</p>
+        <p data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">Tanpa mengurangi rasa hormat kami, bagi tamu yang ingin mengirimkan hadiah kepada kedua mempelai dapat mengirimkannya melalui:</p>
       </div>
+    </div>
 
-      <!-- Kartu Mandiri dengan Gambar Chip -->
-      <div class="col-md-6">
-        <div class="mandiri-card p-5 position-relative rounded shadow-lg ">
+    <!-- Kedua card dalam 1 row -->
+    <div class="row justify-content-center g-3 "data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000"> <!-- g-3 = jarak antar kolom -->
+      <!-- Card Dadan -->
+      <div class="col-md-5 col-10">
+        <div class="mandiri-card p-4 position-relative rounded shadow-lg">
           <img src="img/chip.png" alt="Chip" class="chip-img">
           <img src="img/mandiri.png" alt="Bank Mandiri" class="bank-logo">
           <div class="mt-4">
@@ -297,20 +277,10 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <script>
-    function copyAccount() {
-      navigator.clipboard.writeText("1560018098568");
-      alert("Nomor rekening Bank Mandiri disalin!");
-    }
-  </script>
-</section>
-<div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="mandiri-card p-5 position-relative rounded shadow-lg ">
+      <!-- Card Nita -->
+      <div class="col-md-5 col-10">
+        <div class="mandiri-card p-4 position-relative rounded shadow-lg" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="1000">
           <img src="img/chip.png" alt="Chip" class="chip-img">
           <img src="img/mandiri.png" alt="Bank Mandiri" class="bank-logo">
           <div class="mt-4">
@@ -324,12 +294,19 @@
   </div>
 
   <script>
+    function copyAccount() {
+      navigator.clipboard.writeText("1560018098568");
+      alert("Nomor rekening Bank Mandiri disalin!");
+    }
+
     function salinakun() {
       navigator.clipboard.writeText("1390028570210");
       alert("Nomor rekening Bank Mandiri disalin!");
     }
   </script>
 </section>
+  
+
 
 <footer>
   <div class="container">
@@ -337,12 +314,6 @@
       <div class="col text-center">
        <small class="block">&copy; 2025.All right Reserved.</small>
        <small class="block">Design by <a href="https://www.instagram.com/rzkstwnn/">@Rizkisetiawan</a></small>
-
-       <ul class="mt-3">
-        <li>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-        </li>
-       </ul>
       </div>
     </div>
   </div>
@@ -373,6 +344,10 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+  </script>
   <script>
 
     simplyCountdown('.simply-countdown', {
@@ -471,12 +446,12 @@ disablescroll();
 </script>
 <script>
   const urlparams = new URLSearchParams(window.location.search);
-  const nama = urlparams.get('n');
-
-
+  const nama = urlparams.get('n') || '';
+  const pronoun = urlparams.get('p') || 'Bapak/Ibu/Saudara/i';
   const namacontainer = document.querySelector('.hero h4 span');
-    namacontainer.innerText = n;
+  namacontainer.innerText = `${pronoun} ${nama},`.replace(/ ,$/, ',');
   
+  document.querySelector('#nama').value = nama;
 </script>
 </body>
 
