--- a/index.html
+++ b/index.html
@@ -24,23 +24,6 @@
 <link rel="stylesheet" href="style.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Pastikan hero menutupi seluruh layar */
-    .hero {
-      height: 100vh;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-    }
-
-    /* Tambahan agar scroll smooth (opsional) */
-    html {
-      scroll-behavior: smooth;
-    }
-
-    /* Hilangkan margin default dari body */
-   
-  </style>
 </head>
 
 <body>
@@ -56,21 +39,23 @@
     </main>
   </section>
 
-
-<nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
+<nav class="navbar navbar-expand-md bg-transparent sticky-top justify-content-center mynavbar">
   <div class="container">
-    <a class="navbar-brand" href="#">Dadan & Nita Wedding</a>
-    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <a class="navbar-brand  fs-4" href="#">The wedding Of Dadan & Nita</a>
+
+    <!-- Toggle button for mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
 
+    <!-- Offcanvas menu -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Dadan & Nita Wedding</h5>
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
 
-      <div class="offcanvas-body ">
+      <div class="offcanvas-body">
         <ul class="navbar-nav ms-auto justify-content-center">
           <li class="nav-item">
             <a class="nav-link" href="#home">Home</a>
@@ -87,12 +72,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#gifts">Gifts</a>
           </li>
-            </ul>
-          </li>
+        </ul>
       </div>
     </div>
   </div>
 </nav>
+
 <section id="home" class="home">
   <div class="container">
     <div class="row justify-content-center text-center mb-5" data-aos="zoom-in" data-aos-duration="1000">
@@ -272,7 +257,7 @@
           <img src="img/mandiri.png" alt="Bank Mandiri" class="bank-logo">
           <div class="mt-4">
             <h5 class="fw-bold mb-1">DADAN MULYADI</h5>
-            <p class="mb-2 fs-5">1560018098568</p>
+            <p class="mb-2 ">1560018098568</p>
             <button class="btn btn-outline-light btn-sm" onclick="copyAccount()">Salin</button>
           </div>
         </div>
@@ -285,7 +270,7 @@
           <img src="img/mandiri.png" alt="Bank Mandiri" class="bank-logo">
           <div class="mt-4">
             <h5 class="fw-bold mb-1">NITA ANITA</h5>
-            <p class="mb-2 fs-5">1390028570210</p>
+            <p class="mb-2 ">1390028570210</p>
             <button class="btn btn-outline-light btn-sm" onclick="salinakun()">Salin</button>
           </div>
         </div>
